# PX4-Autopilot

./: CMakeLists.txt
ROMFS/px4fmu_common/init.d/: rc.mc_apps  rc.mc_defaults  rcS
ROMFS/px4fmu_common/init.d-posix/: rcS
ROMFS/px4fmu_common/init.d-posix/airframes/: 10015_visquad  10016_iris  CMakeLists.txt
ROMFS/px4fmu_common/mixers/: CMakeLists.txt  quad_raw.main.mix
boards/cubepilot/cubeorange/: default.px4board
boards/px4/fmu-v3/: default.px4board
boards/px4/sitl/: default.px4board  geometric.px4board  indi.px4board
msg/: CMakeLists.txt  diffflat_setpoint.msg  quad_setpoint.msg
msg/tools/: urtps_bridge_topics.yaml
src/drivers/uavcan/sensors/: gnss.cpp  gnss.hpp
src/lib/: CMakeLists.txt
src/lib/allocator_qp/: CMakeLists.txt  qp_generator.py
src/lib/allocator_qp/include/: osqp_configure.h  workspace.h
src/lib/allocator_qp/src/osqp/: osqp.c  qdldl.c  workspace.c
src/lib/diffflat/: CMakeLists.txt  DiffFlatQuad.hpp
src/lib/mathlib/math/filter/: LowPassFilter2p.hpp
src/lib/matrix/matrix/: Matrix.hpp  SquareMatrix.hpp  Vector.hpp  Vector3.hpp  Vector4.hpp  math.hpp
src/lib/mixer_module/: mixer_module.cpp
src/modules/commander/: Commander.cpp  Commander.hpp
src/modules/control_allocator/: ControlAllocator.cpp
src/modules/geometric_control/: CMakeLists.txt  GeometricControl.cpp  GeometricControl.hpp  Kconfig  geometric_control_params.c
src/modules/indi_att_control/: CMakeLists.txt  Kconfig  indi_att_control.hpp  indi_att_control_main.cpp
src/modules/indi_control/: CMakeLists.txt  IndiControl.cpp  IndiControl.hpp  IndiControlAllocator.cpp  IndiControlCbs.cpp  IndiControlPubs.cpp  Kconfig  MulticopterPositionControl.cpp  MulticopterPositionControl.hpp  indi_control_params.c
src/modules/indi_control/IndiControl/: IndiControl.cpp  PositionControl.hpp
src/modules/indi_pos_control/: CMakeLists.txt  IndiPositionControl.cpp  IndiPositionControl.hpp  MulticopterPositionControl.cpp  MulticopterPositionControl.hpp  indi_pos_control_params.c
src/modules/indi_pos_control/PositionControl/: CMakeLists.txt  IndiPositionControl.cpp  IndiPositionControl.hpp  PositionControl.cpp
src/modules/indi_rate_control/: CMakeLists.txt  IndiRateControl.cpp  IndiRateControl.hpp  Kconfig  MulticopterRateControl.cpp  MulticopterRateControl.hpp  indi_rate_control_params.c
src/modules/indi_rate_control/GeometricControl/: CMakeLists.txt
src/modules/indi_rate_control/RateControl/: RateControl.cpp
src/modules/mc_rate_control/: CMakeLists.txt  MulticopterRateControl.cpp  MulticopterRateControl.hpp  mc_rate_control_params.c
src/modules/mc_rate_control/GeometricControl/: GeometricControl.cpp  GeometricControl.hpp
src/modules/quad_control/: QuadControl.cpp  QuadControl.hpp
src/modules/quad_control/Controllers/: GeometricController.cpp  GeometricController.hpp
src/modules/rover_pos_control/: RoverPositionControl.cpp  RoverPositionControl.hpp  RoverPositionControl_old_commented.cpp  rover_pos_control_params.c
src/modules/simple_commander/: SimpleCommander.cpp  SimpleCommander.hpp  simple_commander_params.c
src/modules/simulator/: simulator_mavlink.cpp
